--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -132,11 +132,16 @@
                     <p>I must explain to you how all this mistaken idea </p>
                 </div>
                 <div class="newsletter-form mc_embed_signup">
-                    <form method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+                   
+                    <form method="post" id="subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll" class="mc-form">
-                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your e-mail address" required>
-                            <button asp-controller="Subscribe" asp-action="Subscribe" id="mc-embedded-subscribe" class="default-btn" type="submit" name="subscribe"><span>subscribe</span></button>
+                            @if (!User.Identity.IsAuthenticated)
+                            {
+                                <input type="email" value="" name="EMAIL" class="email" id="Email-subscribe" placeholder="Enter your e-mail address" required>
+                            }
+                            <button id="button-subscribe" class="default-btn" type="button" name="subscribe"><span>subscribe</span></button>
                         </div>
+                        <div style="text-align: center; color: red !important" id="response-subscribe"></div>
                     </form>
                 </div>
             </div>
@@ -222,6 +227,7 @@
     <script src="~/js/jquery.mb.YTPlayer.js"></script>
     <script src="~/js/jquery.nicescroll.min.js"></script>
     <script src="~/js/plugins.js"></script>
+    <script src="~/js/backend.js"></script>
     <script src="~/js/main.js" asp-append-version="true"></script>
 
 </body>
