--- a/EduHomeBack/EduHomeBack/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -226,8 +226,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="nav-item" asp-controller="User" asp-action="Index">
-                        <a class="nav-link" >
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="User" asp-action="Index" >
                             <i class="mdi mdi-account menu-icon"></i>
                             <span class="menu-title">Users</span>
                         </a>
